# dggs-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: .env.example  README.md  config.toml
src/dggs_cli/: cli.py  config.py  download.py
tests/: test_cli.py
